feat(git-changelog-generator): add action logic

--- a/git-changelog-generator/action.yml
+++ b/git-changelog-generator/action.yml
@@ -7,6 +7,10 @@ inputs:
   from:
     description: 'Commit to start generating changelog from (exclusive)'
     required: true
+  git_commit_url_prefix:
+    required: true
+    description: 'URL prefix that can be used to a commit from this project in the web browser. 
+    For example "https://github.com/inovait/actions-common/commit/" for actions-common repository.'
   target_file:
     description: 'If present, config will be written to this markdown file'
   jira_url:
@@ -16,4 +20,4 @@ outputs:
     description: 'Changelog in the markdown format'
 runs:
   using: 'node16'
-  main: 'dist/index.js' 
+  main: 'dist/index.js'
