ci: do not fail build if there are no changes

--- a/.github/workflows/build-actions.yaml
+++ b/.github/workflows/build-actions.yaml
@@ -25,5 +25,5 @@ jobs:
       - run: 'git config --global user.email "ci@inova.si"'
       - run: 'git config --global user.name "Build"'
       - run: 'git add dist/\*'
-      - run: 'git commit -m "ci: build actions"'
+      - run: 'git commit -m "ci: build actions" || true'
       - run: 'git push'
