--- a/android-setup/action.yaml
+++ b/android-setup/action.yaml
@@ -17,4 +17,4 @@ runs:
       with:
         folder: ~/.gradle/caches
         key: ${{ runner.os }}-gradle-caches
-    - uses: android-actions/setup-android@v2
+    - uses: android-actions/setup-android@7c5672355aaa8fde5f97a91aa9a99616d1ace6bc
