--- a/.github/workflows/build-actions.yaml
+++ b/.github/workflows/build-actions.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'git-changelog-generator/**'
       - 'spotlight-publish/**'
+      - 'libs/**'
       - '.github/workflows/build-actions.yaml'
   workflow_dispatch:
 jobs:
@@ -19,6 +20,8 @@ jobs:
         with:
           node-version: 16
       - run: "sudo apt-get install -y libkrb5-dev curl libcurl4 libssl-dev"
+      - run: "npm ci"
+        working-directory: ./libs
       - run: "npm ci"
         working-directory: ./git-changelog-generator
       - run: "npm run all"
