--- a/.github/workflows/build-actions.yaml
+++ b/.github/workflows/build-actions.yaml
@@ -8,6 +8,7 @@ on:
       - 'git-changelog-generator/**'
       - 'spotlight-publish/**'
       - 'libs/**'
+      - 'jira-get-tickets-from-commits/**'
       - '.github/workflows/build-actions.yaml'
   workflow_dispatch:
 jobs:
@@ -25,9 +26,21 @@ jobs:
         with:
           folder: ~/.npm
           key: ${{ runner.os }}-npm-packages
-      - run: "npm ci"
+      - uses: inovait/action-localcache@main
+        name: "Cache nodegit"
+        with:
+          folder: libs/node_modules/nodegit
+          key: ${{ runner.os }}-nodegit
+        # Libs module has all versions fixed, so we can run npm install instead of npm ci, which uses
+        # cached version of the node git
+      - run: "npm install"
         working-directory: ./libs
-      - run: "npm ci"
+        # Hack: because nodegit install takes forever, copy it from one lib to another
+      - run: "mkdir git-changelog-generator/node_modules"
+      - run: "mkdir jira-get-tickets-from-commits/node_modules"
+      - run: "cp -r libs/node_modules/nodegit git-changelog-generator/node_modules/"
+      - run: "cp -r libs/node_modules/nodegit jira-get-tickets-from-commits/node_modules/"
+      - run: "npm install"
         working-directory: ./git-changelog-generator
       - run: "npm run all"
         working-directory: ./git-changelog-generator
@@ -35,9 +48,14 @@ jobs:
         working-directory: ./spotlight-publish
       - run: "npm run all"
         working-directory: ./spotlight-publish
+      - run: "npm install"
+        working-directory: ./jira-get-tickets-from-commits
+      - run: "npm run all"
+        working-directory: ./jira-get-tickets-from-commits
       - run: 'git config --global user.email "ci@inova.si"'
       - run: 'git config --global user.name "Build"'
       - run: 'git add git-changelog-generator/dist/\*'
       - run: 'git add spotlight-publish/dist/\*'
+      - run: 'git add jira-get-tickets-from-commits/dist/\*'
       - run: 'git commit -m "ci: build actions" || true'
       - run: 'git push'
