--- a/.github/workflows/build-actions.yaml
+++ b/.github/workflows/build-actions.yaml
@@ -2,13 +2,12 @@ name: build-actions
 run-name: Build all actions
 on:
   push:
-    branches:
-      - main
     paths:
       - 'git-changelog-generator/**'
       - 'spotlight-publish/**'
       - 'libs/**'
       - 'jira-get-tickets-from-commits/**'
+      - 'jira-comment/**'
       - '.github/workflows/build-actions.yaml'
   workflow_dispatch:
 jobs:
@@ -52,10 +51,15 @@ jobs:
         working-directory: ./jira-get-tickets-from-commits
       - run: "npm run all"
         working-directory: ./jira-get-tickets-from-commits
+      - run: "npm ci"
+        working-directory: ./jira-comment
+      - run: "npm run all"
+        working-directory: ./jira-comment
       - run: 'git config --global user.email "ci@inova.si"'
       - run: 'git config --global user.name "Build"'
       - run: 'git add git-changelog-generator/dist/\*'
       - run: 'git add spotlight-publish/dist/\*'
       - run: 'git add jira-get-tickets-from-commits/dist/\*'
+      - run: 'git add jira-comment/dist/\*'
       - run: 'git commit -m "ci: build actions" || true'
       - run: 'git push'
