--- a/jira-comment/package.json
+++ b/jira-comment/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "action_common_libs",
+  "name": "jira-comment",
   "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
-    "all": "npm run lint && npm run build"
+    "package": "ncc build --source-map",
+    "all": "npm run lint && npm run build && npm run package"
   },
   "dependencies": {
     "@actions/core": "1.10.0",
     "jira-client": "8.2.2",
-    "nodegit": "0.27.0",
-    "yaml": "2.2.1"
+    "action_common_libs": "file:../libs"
   },
   "devDependencies": {
     "@types/jira-client": "7.1.5",
     "@types/node": "18.11.18",
-    "@types/nodegit": "0.28.2",
     "@typescript-eslint/eslint-plugin": "5.48.0",
+    "@vercel/ncc": "0.36.0",
     "eslint": "8.31.0",
     "eslint-config-standard-with-typescript": "24.0.0",
     "eslint-plugin-github": "4.6.0",
