--- a/jira-get-tickets-from-commits/package.json
+++ b/jira-get-tickets-from-commits/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig-build.json",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map",
+    "test": "jest",
     "all": "npm run lint && npm run build && npm run package"
   },
   "dependencies": {
@@ -26,6 +27,8 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-n": "15.6.0",
     "eslint-plugin-promise": "6.1.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "@types/jest": "29.2.5",
+    "ts-jest": "29.0.5"
   }
 }
