--- a/changelog-since-last-build/action.yaml
+++ b/changelog-since-last-build/action.yaml
@@ -20,8 +20,14 @@ runs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16
+    - name: Get current branch
+      shell: bash
+      run: |
+        echo "CURRENT_BRANCH=$(git branch --show)" >> $GITHUB_ENV
     - name: Derive appropriate SHAs for base and head for `nx affected` commands
       uses: nrwl/nx-set-shas@177b48373c6dc583ce0d9257ffb484bdd232fedf
+      with:
+        main-branch-name: "${{ env.CURRENT_BRANCH }}"
     - name: Generate Changelog
       id: internal_changelog
       uses: inovait/actions-common/git-changelog-generator@f2b952d7c7b689e9ea883804d06f65f2497335d1
