--- a/jira-get-tickets-since-last-build/action.yaml
+++ b/jira-get-tickets-since-last-build/action.yaml
@@ -11,8 +11,14 @@ runs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16
+    - name: Get current branch
+      shell: bash
+      run: |
+        echo "CURRENT_BRANCH=$(git branch --show)" >> $GITHUB_ENV
     - name: Derive appropriate SHAs for base and head for `nx affected` commands
       uses: nrwl/nx-set-shas@177b48373c6dc583ce0d9257ffb484bdd232fedf
+      with:
+        main-branch-name: "${{ env.CURRENT_BRANCH }}"
     - name: Get jira tickets
       uses: inovait/actions-common/jira-get-tickets-from-commits@b138d2f3e6f00a8104124da69b6ca8ff70a6d3c0
       id: internal_jira
