--- a/android-setup/action.yaml
+++ b/android-setup/action.yaml
@@ -15,6 +15,6 @@ runs:
     - uses: inovait/action-localcache@f7ae6363457880b3915a8dabb8d9c562c30e41fb
       name: "Cache gradle dependencies"
       with:
-        folder: ~/.gradle/caches
-        key: ${{ runner.os }}-gradle-caches
+        folder: ~/.gradle/caches/modules-2
+        key: ${{ runner.os }}-gradle-modules
     - uses: android-actions/setup-android@7c5672355aaa8fde5f97a91aa9a99616d1ace6bc
