--- a/bump-version/package.json
+++ b/bump-version/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@actions/core": "1.10.0",
     "action_common_libs": "file:../libs",
+    "isomorphic-git": "1.23.0",
     "jest": "29.3.1",
     "jira-client": "8.2.2",
-    "nodegit": "0.27.0",
     "semver": "7.3.8",
     "ts-jest": "29.0.5"
   },
@@ -23,7 +23,6 @@
     "@types/jest": "29.2.5",
     "@types/jira-client": "7.1.5",
     "@types/node": "18.11.18",
-    "@types/nodegit": "0.28.2",
     "@types/semver": "7.3.13",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@vercel/ncc": "0.36.0",
