--- a/git-changelog-generator/package.json
+++ b/git-changelog-generator/package.json
@@ -15,12 +15,11 @@
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
     "action_common_libs": "file:../libs",
-    "nodegit": "^0.27.0"
+    "isomorphic-git": "1.23.0"
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
-    "@types/nodegit": "^0.28.2",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@vercel/ncc": "^0.36.0",
     "eslint": "^8.31.0",
