--- a/jira-update/package.json
+++ b/jira-update/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@actions/core": "1.10.0",
-    "jira-client": "8.2.2",
-    "action_common_libs": "file:../libs"
+    "action_common_libs": "file:../libs",
+    "jira-client": "8.2.2"
   },
   "devDependencies": {
     "@types/jira-client": "7.1.5",
