--- a/libs/package.json
+++ b/libs/package.json
@@ -10,14 +10,13 @@
   },
   "dependencies": {
     "@actions/core": "1.10.0",
+    "isomorphic-git": "1.23.0",
     "jira-client": "8.2.2",
-    "nodegit": "0.27.0",
     "yaml": "2.2.1"
   },
   "devDependencies": {
     "@types/jira-client": "7.1.5",
     "@types/node": "18.11.18",
-    "@types/nodegit": "0.28.2",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "eslint": "8.31.0",
     "eslint-config-standard-with-typescript": "24.0.0",
