--- a/android-setup/action.yaml
+++ b/android-setup/action.yaml
@@ -16,9 +16,11 @@ runs:
       with:
         folder: ~/.gradle/wrapper
         key: ${{ runner.os }}-gradle-wrapper
+        restore: '${{ runner.debug != 1 }}'
     - uses: inovait/action-localcache@a4627c88dfd2460d515056e1e29abee649252ee3
       name: "Cache gradle dependencies"
       with:
         folder: ~/.gradle/caches/modules-2
         key: ${{ runner.os }}-gradle-modules
+        restore: '${{ runner.debug != 1 }}'
     - uses: android-actions/setup-android@7c5672355aaa8fde5f97a91aa9a99616d1ace6bc
