--- a/jira-update/action.yml
+++ b/jira-update/action.yml
@@ -10,7 +10,7 @@ inputs:
   priority:
     description: '(Optional) Set priority for this ticket'
   field:
-    description: '(Optional) Set custom field for this ticket'
+    description: '(Optional) Append value to custom field for this ticket'
 runs:
   using: 'node16'
   main: 'dist/index.js'
