--- a/bump-version-since-last-build/action.yaml
+++ b/bump-version-since-last-build/action.yaml
@@ -25,7 +25,7 @@ runs:
       with:
         main-branch-name: "${{ env.CURRENT_BRANCH }}"
     - name: Get version
-      uses: inovait/actions-common/bump-version@1df7cc52265c6f0716f37cc5ef9e44d282b3c399
+      uses: inovait/actions-common/bump-version@v2
       id: internal_version
       with:
         version: '${{ inputs.version }}'
