--- a/changelog-since-last-build/action.yaml
+++ b/changelog-since-last-build/action.yaml
@@ -30,7 +30,7 @@ runs:
         main-branch-name: "${{ env.CURRENT_BRANCH }}"
     - name: Generate Changelog
       id: internal_changelog
-      uses: inovait/actions-common/git-changelog-generator@1df7cc52265c6f0716f37cc5ef9e44d282b3c399
+      uses: inovait/actions-common/git-changelog-generator@v2
       with:
         from: '${{ env.NX_BASE }}'
         to: '${{ env.NX_HEAD }}'
