--- a/jira-get-tickets-from-commits/package.json
+++ b/jira-get-tickets-from-commits/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map",
     "test": "jest",
-    "all": "npm run lint && npm run build && npm run package"
+    "all": "npm run lint && npm run build && npm run test && npm run package"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
