feat: use child process git log to extract commits

--- a/git-changelog-generator/package.json
+++ b/git-changelog-generator/package.json
@@ -14,8 +14,7 @@
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
-    "action_common_libs": "file:../libs",
-    "isomorphic-git": "1.23.0"
+    "action_common_libs": "file:../libs"
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
