--- a/jira-get-tickets-from-commits/package.json
+++ b/jira-get-tickets-from-commits/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "action_common_libs": "file:../libs",
-    "isomorphic-git": "1.23.0"
+    "action_common_libs": "file:../libs"
   },
   "devDependencies": {
     "@types/jest": "29.2.5",
