--- a/.github/workflows/build-actions.yaml
+++ b/.github/workflows/build-actions.yaml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: "sudo apt-get install -y libkrb5-dev curl libcurl4 libssl-dev"
+      - run: "sudo apt-get update && sudo apt-get install -y libkrb5-dev curl libcurl4 libssl-dev"
       - uses: actions/cache@v3
         name: "Cache npm packages"
         with:
