--- a/.github/workflows/build-actions.yaml
+++ b/.github/workflows/build-actions.yaml
@@ -67,5 +67,5 @@ jobs:
       - run: 'git add jira-transition/dist/\*'
       - run: 'git add jira-update/dist/\*'
       - run: 'git add bump-version/dist/\*'
-      - run: 'git commit -m "ci: build actions" || true'
+      - run: 'git commit -m "chore: build actions" || true'
       - run: 'git push'
