--- a/android-setup/action.yaml
+++ b/android-setup/action.yaml
@@ -1,7 +1,7 @@
 name: "Setup Android Environment"
 description: "Setup java, Android SDK and enable dependency caching."
 inputs:
-  java_version:
+  java-version:
     description: 'Java version to built with'
     default: "11"
 runs:
@@ -9,5 +9,5 @@ runs:
   steps:
     - uses: actions-common/gradle-setup@v5
       with:
-        java-version: '${{ inputs.java_version }}'
+        java-version: '${{ inputs.java-version }}'
     - uses: android-actions/setup-android@7c5672355aaa8fde5f97a91aa9a99616d1ace6bc
